<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Services Screen -->
    <string name="frag_services_btn_plus" translatable="false">+</string>
    <string name="frag_services_btn_desc">Add</string>
    <string name="frag_services_sv_hint">Search…</string>
    <string name="frag_services_et_hint">Type the service..</string>
    <string name="frag_services_tv_title">Add</string>
    <string name="frag_services_tv_empty">No service has been found</string>

    <!--  History Screen  -->
    <string name="frag_history_atv_hint">Search…</string>
    <string name="frag_history_btn_payments">Payments</string>
    <string name="frag_history_btn_requests">Requests</string>
    <string name="frag_history_tv_name">Anna Doe</string>
    <string name="frag_history_tv_saloon">Saloon:</string>
    <string name="frag_history_saloon_name">Magnolia</string>
    <string name="frag_history_tv_value">Value:</string>
    <string name="frag_history_tv_saloon_value">R$ 110,00</string>
    <string name="frag_history_error_img_desc">payment not processed</string>
    <string name="frag_history_accept_img_desc">payment processed</string>

    <!-- Calendar Screen -->
    <string name="frag_calendar_btn_calendar">Calendar</string>
    <string name="frag_calendar_btn_confirm">Confirm</string>
    <string name="frag_calendar_sv_search">Search…</string>
    <string name="frag_calendar_btn_events">Events</string>
    <string name="frag_calendar_tv_canceled_day">Cancel day</string>
    <string name="frag_calendar_edt_reason">Reason</string>
    <string name="frag_calendar_tv_salon_label">Salon: </string>
    <string name="frag_calendar_tv_date_label">Date: </string>
    <string name="frag_calendar_tv_legend_marked">Marked</string>
    <string name="frag_calendar_tv_legend_today">Today\'s day</string>
    <string name="frag_calendar_tv_legend_canceled">Canceled</string>
    <string name="frag_calendar_tv_list_empty">No events have been scheduled</string>
    <string name="frag_calendar_tv_input_blank">The field cannot be empty</string>

    <!-- Dashboard Screen -->
    <string name="frag_dashboard_tv_title">Annual Statistics</string>
    <string name="frag_dashboard_label_events">Events</string>
    <string name="frag_dashboard_label_people">People</string>
    <string name="frag_dashboard_text_events">%4d Events</string>
    <string name="frag_dashboard_text_people">%4d People</string>
    <string name="frag_dashboard_month_january">January</string>
    <string name="frag_dashboard_month_february">February</string>
    <string name="frag_dashboard_month_march">March</string>
    <string name="frag_dashboard_month_april">April</string>
    <string name="frag_dashboard_month_may">May</string>
    <string name="frag_dashboard_month_june">June</string>
    <string name="frag_dashboard_month_july">July</string>
    <string name="frag_dashboard_month_august">August</string>
    <string name="frag_dashboard_month_september">September</string>
    <string name="frag_dashboard_month_october">October</string>
    <string name="frag_dashboard_month_november">November</string>
    <string name="frag_dashboard_month_december">December</string>

    <!-- Forum Screen -->
    <string name="frag_forum_tv_empty">No posts found</string>
    <string name="frag_forum_btn_communicate">Communicate</string>
    <string name="frag_forum_btn_urgent">Urgent</string>
    <string name="frag_forum_et_hint">What\'s happening?</string>
    <string name="frag_forum_ib_previous">Previous</string>
    <string name="frag_forum_ib_send">Send</string>

    <!-- Settings Screen -->
    <string name="frag_settings_tv_title">What do you want to adjust?</string>
    <string name="frag_settings_btn_profile">Profile</string>
    <string name="frag_settings_btn_condo">Condominium</string>
    <string name="frag_settings_text_name">Name</string>
    <string name="frag_settings_text_surname">Surname</string>
    <string name="frag_settings_text_document">CPF</string>
    <string name="frag_settings_text_apartment_number">Apartment No.</string>
    <string name="frag_settings_text_block">Block</string>
    <string name="frag_settings_text_phone">Phone</string>
    <string name="frag_settings_text_email">Email</string>
    <string name="frag_settings_text_name_insert" translatable="false">Mauro</string>
    <string name="frag_settings_text_surname_insert" translatable="false">da CT</string>
    <string name="frag_settings_text_document_insert" translatable="false">000.000.000–00</string>
    <string name="frag_settings_text_house_number_insert" translatable="false">25</string>
    <string name="frag_settings_text_block_insert" translatable="false">C</string>
    <string name="frag_settings_text_phone_insert" translatable="false">(11)xxxxx-xxxx</string>
    <string name="frag_settings_text_email_insert" translatable="false">Mauro@gmail.com</string>

    <!-- Settings Continued Screen -->
    <string name="frag_settings_text_residents">Residents</string>
    <string name="frag_settings_text_apartments">Apartments</string>
    <string name="frag_settings_text_salons">Salons</string>
    <string name="frag_settings_btn_add_salons">Add salons +</string>
    <string name="frag_history_text_no_payments">No requests have been found</string>
    <string name="frag_service_text_no_service_found">No services have been found</string>
    <string name="frag_history_tv_value_currency">R$%.2f</string>
    <string name="frag_history_payment_made">Payment made</string>
    <string name="frag_history_payment_pending">Payment Pending</string>
</resources>
