<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/frag_iv_icon_user"
        android:layout_width="@dimen/size_huge"
        android:layout_height="@dimen/size_huge"
        android:src="@drawable/ic_users"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacing_extremeXXX"/>

    <TextView
        android:id="@+id/frag_tx_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SubTitleAppearance"
        android:text="@string/frag_settings_text_name_user"
        android:textStyle="bold"
        android:textSize="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/frag_iv_icon_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/spacing_extremeXX"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_1"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tx_name_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/size_largeX"/>

    <TextView
        android:id="@+id/frag_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/size_small"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_1"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_1"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_name_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_name_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_1"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_1"
        android:layout_marginTop="14dp"
        android:padding="@dimen/corners_nano"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_2"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_name"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_name"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_surname"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_2"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_2"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_surname_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_surname_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_2"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_2"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_3"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_surname"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_surname"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_document"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_3"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_3"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_document_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_document_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_3"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_3"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_4"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_document"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_document"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_house_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_number"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_4"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_4"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_house_number_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_house_number_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_4"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_4"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_5"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_house_number"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_house_number"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_block"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_5"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_5"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_block_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_block_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_5"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_5"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_6"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_block"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_block"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_6"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_6"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_phone_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_phone_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_6"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_6"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/frag_mt_7"
        android:layout_width="355dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/frag_tv_phone"
        app:layout_constraintLeft_toLeftOf="@id/frag_tv_phone"
        android:layout_marginTop="@dimen/corners_small"/>

    <TextView
        android:id="@+id/frag_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_settings_text_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_small"
        app:layout_constraintLeft_toLeftOf="@id/frag_mt_7"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_7"
        android:layout_marginTop="@dimen/corners_small"/>

    <EditText
        android:id="@+id/frag_et_email_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/frag_settings_text_email_insert"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/size_small"
        app:layout_constraintEnd_toEndOf="@id/frag_mt_7"
        app:layout_constraintTop_toBottomOf="@id/frag_mt_7"
        android:padding="@dimen/corners_micro"
        android:layout_marginTop="@dimen/spacing_ligth"/>

</androidx.constraintlayout.widget.ConstraintLayout>