<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_extremeXXX"
        android:gravity="center"
        android:text="@string/frag_settings_tv_title"
        android:textAppearance="@style/TitleAppearance"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/frag_settings_btn_profile"
        style="@style/ButtonEzSchedule"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:text="@string/frag_settings_btn_profile"
        android:textAppearance="@style/ButtonAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frag_settings_btn_condominium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.38" />

    <Button
        android:id="@+id/frag_settings_btn_condominium"
        style="@style/ButtonEzSchedule"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/spacing_small"
        android:text="@string/frag_settings_btn_condo"
        android:textAppearance="@style/ButtonAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frag_settings_btn_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>