<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/frag_history_sv_history"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/bg_search_view"
        android:textSize="@dimen/size_small"
        android:textStyle="bold"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@id/frag_rv_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/frag_calendar_sv_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frag_rv_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:clipToPadding="false"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/light_gray"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/frag_btn_payments_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_history_sv_history"
        tools:listitem="@layout/adapter_history" />


    <Button
        android:id="@+id/frag_btn_payments_history"
        style="@style/ButtonEzSchedule"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/spacing_large"
        android:enabled="false"
        android:text="@string/frag_history_btn_payments"
        android:textAppearance="@style/ButtonAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frag_btn_requests_history"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/frag_rv_history"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/frag_btn_requests_history"
        style="@style/ButtonEzSchedule"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/frag_history_btn_requests"
        android:textAppearance="@style/ButtonAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/frag_rv_history"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/frag_btn_payments_history"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>