<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_ezschedule"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/iv_lower"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:scaleType="centerCrop"
        android:src="@drawable/lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_cancel_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/frag_calendar_tv_canceled_day"
        android:textAppearance="@style/TitleAppearance"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lower" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SubTitleAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_day"
        tools:text="date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/frag_calendar_edt_reason"
        app:boxCornerRadiusBottomEnd="@dimen/corners_small"
        app:boxCornerRadiusBottomStart="@dimen/corners_small"
        app:boxCornerRadiusTopEnd="@dimen/corners_small"
        app:boxCornerRadiusTopStart="@dimen/corners_small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/size_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_canceled"
        style="@style/ButtonEzSchedule"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginVertical="@dimen/spacing_large"
        android:padding="0dp"
        android:text="@string/frag_calendar_btn_events"
        android:textAppearance="@style/ButtonAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_reason"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>